// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<span
  className="log formattedMessage"
>
  Hello World
</span>
`;

exports[`matches snapshot 2`] = `
<pre
  className="formattedMessage log"
>
  {
  "a": 1,
  "b": 2
}
</pre>
`;

exports[`matches snapshot 3`] = `
<pre
  className="formattedMessage log"
>
  [
  1,
  2,
  3
]
</pre>
`;

exports[`matches snapshot 4`] = `
<pre
  className="formattedMessage log"
/>
`;

exports[`matches snapshot 5`] = `
<pre
  className="formattedMessage log"
>
  null
</pre>
`;
